feat(backend): support user update identity fields
